tests/fixtures/LatestTests/ObjectTests/errors/extra_fields.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
type Person = {
    name: str
    age: int
}

var p: Person = {
    name: "John",
    age: 30,
    extra: "field"
}

